# ML-Platform

./: .dockerignore  .gitignore  README.md  TODO.md  dev.ps1  docker-compose.yml  docker.env.example  package-deploy.ps1
backend/: .env.example  .pre-commit-config.yaml  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial_schema.py  0002_dataset_versions_and_exports.py
backend/app/: config.py  deps.py  exceptions.py  main.py
backend/app/core/: dataset_files.py
backend/app/core/runner/: base.py  process.py  sync.py
backend/app/db/: doris.py  postgres.py
backend/app/frameworks/: __init__.py  base.py  registry.py
backend/app/models/: __init__.py  annotation.py  dataset.py  dataset_version.py  model.py  task.py
backend/app/repositories/: __init__.py  annotation.py  base.py  dataset.py  dataset_version.py  label.py  model.py  task.py
backend/app/routers/: __init__.py  annotation.py  dataset.py  dataset_export.py  dataset_version.py  evaluation.py  inference.py  label.py  model.py  stats.py  task.py  upload.py  ws.py
backend/app/runners/: eval_worker.py  train_worker.py
backend/app/schemas/: annotation.py  common.py  dataset.py  dataset_version.py  evaluation.py  inference.py  label.py  model.py  task.py  upload.py
backend/app/services/: annotation.py  annotation_export.py  dataset.py  dataset_import.py  dataset_version.py  evaluation.py  inference.py  label.py  model.py  task.py  upload.py
backend/app/utils/: bbox.py  dataset.py  image.py  security.py
(+105 files in other folders)
